--- a/demo/index.html
+++ b/demo/index.html
@@ -4,8 +4,8 @@
     <link rel='stylesheet' href='../skins/default/formio.full.css'>
     <script type="text/javascript" src="./require.js" data-main="./main.js"></script>
     <script type='text/javascript'>
-      function initPage($,Formio) {
-        Formio.builder(document.getElementById('builder'));
+      function initPage($,formios) {
+        formios.Formio.builder(document.getElementById('builder'));
       };
     </script>
   </head>
