--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,9 @@
 <html>
   <head>
-    <link rel='stylesheet' href='./bs3/css/bootstrap.css'>
-    <link rel='stylesheet' href='../skins/default/formio.full.css'>
+  <link rel="stylesheet" href="./bs3/fontawesome/css/font-awesome.css">
+    <link rel='stylesheet' href='./bs3/bootstrap/css/bootstrap.css'>
+    <link rel='stylesheet' href='../skins/default/formio.form.css'>
+    <link rel='stylesheet' href='../skins/default/formio.builder.css'>
     <script type="text/javascript" src="./require.js" data-main="./main.js"></script>
     <script type='text/javascript'>
       function initPage($,formios) {
