--- a/.original/v4.10.0_20200406/test1.html
+++ b/.original/v4.10.0_20200406/test1.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css'>
     <link rel='stylesheet' href='./dist/formio.full.css'>
     <script src='./dist/formio.full.js'></script>
